hphp/hack/test/typecheck/coeffects/poly_var_reassign/foreach.php.exp
File "foreach.php", line 6, characters 12-16:
This variable cannot be reassigned because it is used for a dependent context (Typing[4404])
File "foreach.php", line 10, characters 22-23:
This variable cannot be reassigned because it is used for a dependent context (Typing[4404])
File "foreach.php", line 14, characters 22-23:
This variable cannot be reassigned because it is used for a dependent context (Typing[4404])
